# duckdb-mysql-sharding

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  example_config.conf  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
src/: CMakeLists.txt  mysql_schema_manager.cpp  sharding_catalog.cpp  sharding_config.cpp  sharding_extension.cpp  sharding_scanner.cpp  sharding_schema_entry.cpp  sharding_storage.cpp  sharding_table_entry.cpp  sharding_transaction.cpp  sharding_transaction_manager.cpp
src/include/: mysql_schema_manager.hpp  mysql_sharding_extension.hpp  sharding_catalog.hpp  sharding_config.hpp  sharding_extension.hpp  sharding_scanner.hpp  sharding_schema_entry.hpp  sharding_storage.hpp  sharding_table_entry.hpp  sharding_transaction.hpp  sharding_transaction_manager.hpp
vcpkg_ports/libmariadb/: fix-const-qualifiers.diff  libmariadb-config.cmake  portfile.cmake  vcpkg.json
